BoardRenderer class and draw grid through them have been added

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -7,6 +7,8 @@ project(KGo-game
 
 ########## Game ########################################
 
+# set(CMAKE_AUTOMOC ON)
+
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
 add_executable(${PROJECT_NAME})
@@ -14,9 +16,19 @@ add_executable(${PROJECT_NAME})
 set(source "src")
 set(main "${source}/main")
 set(maindev "${main}/sources")
+set(mainres "${main}/resources")
 set(kgo "kgo")
+set(models "models")
 set(gui "gui")
-set (renderers "renderers")
+set(renderers "renderers")
+set(services "services")
+
+qt5_add_resources(RESOURCES
+   ${mainres}/assets.qrc
+)
+
+set_property(TARGET ${PROJECT_NAME}
+    PROPERTY AUTOMOC ON)
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
@@ -26,8 +38,15 @@ target_sources(${PROJECT_NAME}
     PRIVATE ${maindev}/${gui}/Board.cpp
     PRIVATE ${maindev}/${gui}/MainWindow.hpp
     PRIVATE ${maindev}/${gui}/MainWindow.cpp
+    PRIVATE ${maindev}/${models}/BoardModel.hpp
+    PRIVATE ${maindev}/${models}/BoardModel.cpp
     PRIVATE ${maindev}/${renderers}/IRenderer.hpp
     PRIVATE ${maindev}/${renderers}/NullRenderer.hpp
+    PRIVATE ${maindev}/${renderers}/BoardRenderer.hpp
+    PRIVATE ${maindev}/${renderers}/BoardRenderer.cpp
+    PRIVATE ${maindev}/${services}/GuiService.hpp
+    PRIVATE ${maindev}/${services}/GuiService.cpp
+    PRIVATE ${RESOURCES}
 )
 
 target_include_directories(${PROJECT_NAME}
